<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DownloadFragment"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/header_frame"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/cardview_dark_background">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_cloud_download" />
    </FrameLayout>
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/header_frame"
        app:layout_constraintBottom_toTopOf="@+id/btn_download"
        android:layout_margin="16dp"
        >
        <RadioButton
            android:id="@+id/radio_glide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/glid_description"/>
        <RadioButton
            android:id="@+id/radio_repo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_repo_description"/>
        <RadioButton
            android:id="@+id/radio_retrofit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retrofit_description"/>
    </RadioGroup>

    <com.example.android.advancedandroidkotlinpart1.SickCustomButton
        android:id="@+id/btn_download"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:waitingText="@string/download"
        app:actionText="@string/downloading"
        app:circleColor="#FF44CC"
        />


</androidx.constraintlayout.widget.ConstraintLayout>