<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DownloadDetailsFragment">
    <data>
        <variable
            name="downloadStatus"
            type="com.example.android.advancedandroidkotlinpart1.DownloadStatus" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        app:layoutDescription="@xml/download_motion"
        >
        <TextView
            android:id="@+id/file_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"
            android:text="@string/file_name" />
        <TextView
            android:id="@+id/file_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:paddingBottom="16dp"
            android:text="@{downloadStatus.title}" />

        <TextView
            android:id="@+id/status_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"
            android:text="@string/status" />
        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:text="@{downloadStatus.status}" />
        <Button
            android:id="@+id/ok_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok"/>
    </androidx.constraintlayout.motion.widget.MotionLayout>

</layout>